# slack-watchman

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker_build_test.yml  docker_publish.yml  dockerpublish.yml  ecrpublish.yml  github_release.yml  python_package.yml  python_publish.yml  python_run_integration_tests.yml  python_run_tests.yml  pythonapp.yml  pythonpackage.yml  pythonpublish.yml  run_tests.yml
docs/: app_manifest.json  example.conf  logging.md  rules.md
slack_watchman/: __about__.py  __init__.py  __main__.py  logger.py  slack_wrapper.py
slack_watchman/rules/: archive_files.yaml  aws_api_tokens.yaml  azure_api_tokens.yaml  budget_files.yaml  certificate_files.yaml  client_secrets.yaml  cloudflare_api_tokens.yaml  cusip_numbers.yaml  cv_files.yaml  executable_files.yaml  facebook_secret_tokens.yaml  gcp_service_account_files.yaml  gcp_service_accounts_text.yaml  github_api_tokens.yaml  heroku_api_tokens.yaml  itin_numbers.yaml  jira_api_tokens.yaml  mailchimp_api_tokens.yaml  mailgun_api_tokens.yaml  mastercard_datacash.yml  ms_nuget_key.yaml  ni_numbers.yaml  pagerduty_api_tokens.yaml  passport_numbers.yaml  passwords.yaml  private_keys.yaml  private_tokens.yaml  shodan_api_tokens.yaml  ssn_us.yaml  stripe_api_tokens.yaml  twilio_api_tokens.yaml  twitter_api_tokens.yaml
src/: __main__.py  slack-hunter.py  slack-monitor.py  slack-watchman.py
src/slack_watchman/: __init__.py  __version__.py  exceptions.py  loggers.py  signature_downloader.py  signature_updater.py  slack_wrapper.py  sw_logger.py  utils.py  watchman_processor.py
src/slack_watchman/clients/: slack_client.py
src/slack_watchman/models/: auth_vars.py  conversation.py  post.py  signature.py  user.py  workspace.py
tests/: test_rules.py
tests/integration/: test_integration_slack_client.py
tests/unit/: test_unit_exceptions.py  test_unit_loggers.py  test_unit_signature_downloader.py  test_unit_slack_client.py  test_unit_utils.py  test_watchman_processor.py
tests/unit/models/: fixtures.py  test_unit_auth_vars.py  test_unit_conversation.py  test_unit_post.py  test_unit_signature.py  test_unit_user.py  test_unit_workspace.py
watchman/: __about__.py  __init__.py  __main__.py  audit.py  config.py  constants.py  definitions.py  logger.py  slack_wrapper.py  test_slack_con.py
watchman/rules/: access_tokens.yaml  archive_files.yaml  aws_api_tokens.yaml  azure_api_tokens.yaml  azure_service_account_files.yaml  bank_cards.yaml  bearer_tokens.yaml  certificate_files.yaml  client_secrets.yaml  config_files.yaml  cusip_numbers.yaml  date_of_birth.yaml  drivers_licence_uk.yaml  excel_files.yaml  executable_files.yaml  facebook_access_tokens.yaml  facebook_secret_tokens.yaml  gcp_service_account_files.yaml  gcp_service_accounts_text.yaml  github_api_tokens.yaml  google_api_tokens.yaml  iban_numbers.yaml  interesting_files.yaml  itin_numbers.yaml  ni_numbers.yaml  passport_numbers.yaml  passwords.yaml  paypal_braintree.yaml  powerpoint_files.yaml  private_keys.yaml  private_tokens.yaml  s3_config_files.yaml  slack_api_tokens.yaml  slack_webhooks.yaml  ssn_us.yaml  twitter_api_tokens.yaml  word_files.yaml
