[metadata]
name = slack-watchman
version = attr: slack_watchman.__version__.__version__
description = Monitoring and enumerating Slack for exposed secrets
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/PaperMtn/slack-watchman
author = PaperMtn
author_email = papermtn@protonmail.com
keywords = audit, slack, slack-watchman, watchman, blue-team, red-team, threat-hunting
classifiers =
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
package_dir =
    = src
include_package_data = True
packages = find_namespace:
python_requires = >=3.10
install_requires =
    requests
    PyYAML
    colorama

[options.entry_points]
console_scripts =
    slack-watchman = slack_watchman:main

[options.packages.find]
where = src